force-app/main/default/objects/INET_Request__c/INET_Request__c.object-meta.xml
<CustomObject>
    <label>INET Request</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>INET_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>