force-app/main/default/objects/INET_Request__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address Line 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>