force-app/main/default/objects/INET_Request__c/fields/Agreement_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Uploaded</label>
    <type>Checkbox</type>
</CustomField>