force-app/main/default/objects/INET_Request__c/fields/Cancellation_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reasons__c</fullName>
    <label>Cancellation Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>