force-app/main/default/objects/INET_Request__c/fields/CATV_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>CATV_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CATV Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>INET_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>