force-app/main/default/objects/INET_Request__c/fields/Contractor_del__c.field-meta.xml
<CustomField>
    <fullName>Contractor_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>INET_Requests2_del</relationshipName>
    <type>Lookup</type>
</CustomField>