force-app/main/default/objects/INET_Request__c/fields/Deployment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Start_Date__c</fullName>
    <label>Deployment Start Date</label>
    <type>Date</type>
</CustomField>