force-app/main/default/objects/INET_Request__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>