force-app/main/default/objects/INET_Request__c/fields/Feedback_Notes__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Notes__c</fullName>
    <label>Feedback Notes</label>
    <type>TextArea</type>
</CustomField>