force-app/main/default/objects/INET_Request__c/fields/INET_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>INET_Request_Number__c</fullName>
    <description>Use to index IROC_Id__c &gt; copies the value to be searchable on Experience Site</description>
    <label>INET Request Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>