force-app/main/default/objects/INET_Request__c/fields/Invoice_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Uploaded</label>
    <type>Checkbox</type>
</CustomField>