force-app/main/default/objects/INET_Request__c/fields/IROC_Id__c.field-meta.xml
<CustomField>
    <fullName>IROC_Id__c</fullName>
    <formula>TEXT(YEAR(  Request_Date__c  ))&amp; &quot; - &quot; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IROC Id</label>
    <type>Text</type>
</CustomField>