force-app/main/default/objects/INET_Request__c/fields/Island__c.field-meta.xml
<CustomField>
    <fullName>Island__c</fullName>
    <label>Island</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hawaii</fullName>
            </value>
            <value>
                <fullName>Kahoolawe</fullName>
            </value>
            <value>
                <fullName>Kauai</fullName>
            </value>
            <value>
                <fullName>Lanai</fullName>
            </value>
            <value>
                <fullName>Maui</fullName>
            </value>
            <value>
                <fullName>Molokai</fullName>
            </value>
            <value>
                <fullName>Niihau</fullName>
            </value>
            <value>
                <fullName>Oahu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>