force-app/main/default/objects/INET_Request__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <inlineHelpText>For mileage input above 25 miles, contact CATV.</inlineHelpText>
    <label>Mileage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>