force-app/main/default/objects/INET_Request__c/fields/Permit_Status__c.field-meta.xml
<CustomField>
    <fullName>Permit_Status__c</fullName>
    <label>Permit Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>