force-app/main/default/objects/INET_Request__c/fields/Projected_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Deployment_Date__c</fullName>
    <label>Projected Deployment Date</label>
    <type>Date</type>
</CustomField>