force-app/main/default/objects/INET_Request__c/fields/Provider_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Contact_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Provider Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Type__c</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Provider__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>INET_Requests (Provider Contact Name)</relationshipLabel>
    <relationshipName>INET_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>