force-app/main/default/objects/INET_Request__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <label>Provider Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hawaii Telecom</fullName>
            </value>
            <value>
                <fullName>OTWC</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>