force-app/main/default/objects/INET_Request__c/fields/Providers_Email__c.field-meta.xml
<CustomField>
    <fullName>Providers_Email__c</fullName>
    <formula>Provider_Contact_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider&apos;s Email</label>
    <type>Text</type>
</CustomField>