force-app/main/default/objects/INET_Request__c/fields/Quote_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Quote_Subtype__c</fullName>
    <label>Quote Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Requested</fullName>
            </value>
            <value>
                <fullName>Quote Sent</fullName>
            </value>
            <value>
                <fullName>Quote Review</fullName>
            </value>
            <value>
                <fullName>Quote Rejected</fullName>
            </value>
            <value>
                <fullName>Quote Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>