force-app/main/default/objects/INET_Request__c/fields/Quote_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Quote_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Uploaded</label>
    <type>Checkbox</type>
</CustomField>