force-app/main/default/objects/INET_Request__c/fields/Requesters_Email__c.field-meta.xml
<CustomField>
    <fullName>Requesters_Email__c</fullName>
    <formula>Requestor_Contact_Name__r.Email</formula>
    <label>Requester&apos;s Email</label>
    <type>Text</type>
</CustomField>