force-app/main/default/objects/INET_Request__c/fields/Requestor_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Type__c</field>
            <operation>equals</operation>
            <value>Requestor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>INET_Requests (Requestor Contact Name)</relationshipLabel>
    <relationshipName>INET_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>