force-app/main/default/objects/INET_Request__c/fields/Scheduled_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Deployment_Date__c</fullName>
    <label>Scheduled Deployment Date</label>
    <type>Date</type>
</CustomField>