force-app/main/default/objects/INET_Request__c/fields/Sow_Needed__c.field-meta.xml
<CustomField>
    <fullName>Sow_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOW Needed</label>
    <type>Checkbox</type>
</CustomField>