force-app/main/default/objects/INET_Request__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <defaultValue>&quot;HI&quot;</defaultValue>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>