force-app/main/default/objects/INET_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>CATV Review</fullName>
            </value>
            <value>
                <fullName>Assigned Back</fullName>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>PO Created</fullName>
            </value>
            <value>
                <fullName>Work Initiated</fullName>
            </value>
            <value>
                <fullName>Work Completed</fullName>
            </value>
            <value>
                <fullName>Invoice Created</fullName>
            </value>
            <value>
                <fullName>Invoice Paid</fullName>
            </value>
            <value>
                <fullName>Connected to INET</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>