force-app/main/default/objects/INET_Request__c/recordTypes/INET_Request.recordType-meta.xml
<RecordType>
    <fullName>INET_Request</fullName>
    <active>true</active>
    <label>INET Request</label>
</RecordType>