force-app/main/default/objects/INET_Request__c/validationRules/Approval_Comments_Cannot_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Comments_Cannot_Be_Blank</fullName>
    <active>true</active>
    <description>This validation rule is for the rejection comments cannot be blank if the approval status is Rejected.</description>
    <errorConditionFormula>AND(ISPICKVAL(Approval_status__c,&apos;Approved&apos;) ,  ISBLANK(Approval_Comments__c) )</errorConditionFormula>
    <errorMessage>Approval Comments cannot be blank.</errorMessage>
</ValidationRule>