force-app/main/default/objects/INET_Request__c/validationRules/City_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>City_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( City__c, &quot;[a-zA-Z ]*$&quot;))</errorConditionFormula>
    <errorMessage>Please add the city name. Digits and Special characters are not allowed</errorMessage>
</ValidationRule>