force-app/main/default/objects/INET_Request__c/validationRules/State_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( State__c, &quot;[a-zA-Z ]*$&quot;))</errorConditionFormula>
    <errorMessage>Please add the state name. Digits and Special characters are not allowed</errorMessage>
</ValidationRule>