force-app/main/default/objects/INET_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IROC_Id__c</columns>
    <columns>Status__c</columns>
    <columns>Provider__c</columns>
    <columns>Requestor__c</columns>
    <columns>Island__c</columns>
    <columns>CATV_Reviewer__c</columns>
    <columns>Sow_Needed__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>