force-app/main/default/objects/INET_Request__c/listViews/All_CATV_Requests.listView-meta.xml
<ListView>
    <fullName>All_CATV_Requests</fullName>
    <columns>NAME</columns>
    <columns>IROC_Id__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Provider__c</columns>
    <columns>Sow_Needed__c</columns>
    <columns>Requestor_Contact_Name__c</columns>
    <columns>Provider_Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All CATV Requests</label>
</ListView>