force-app/main/default/objects/INET_Request__c/listViews/CATV_Staff_Reviewers_INET_Request.listView-meta.xml
<ListView>
    <fullName>CATV_Staff_Reviewers_INET_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>CATV Staff Reviewers</label>
    <queue>CATV_Staff_Reviewers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>