force-app/main/default/objects/INET_Request__c/listViews/Pending_CATV_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_CATV_Approval</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Approval_status__c</columns>
    <columns>Approval_Comments__c</columns>
    <columns>Rejection_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted,CATV Review,Resubmitted</value>
    </filters>
    <label>Pending CATV Approval</label>
</ListView>